Add setting for user/owner password

--- a/server/templates/complete.tmpl
+++ b/server/templates/complete.tmpl
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <a href="{{ .downloadURL }}"> download here </a> <br />
+        <a href="{{ .downloadURL }}"> download here </a> <br> <br>
         <button onclick="request_delete()" id="delete_btn" type="button"> Click here to delete the zip file on the server after you download it </button>
         <p id="result"></p>
         <script type="text/javascript">
